feat(api): add Axios client, Redux store and RTK Query documents API with mock data

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,8 @@
       "@shared/*": ["src/shared/*"],
       "@modules/*": ["src/modules/*"],
       "@helpers/*": ["src/helpers/*"],
-      "@store/*": ["src/store/*"],
+      "@store": ["src/store"],
+    "@store/*": ["src/store/*"],
       "@api/*": ["src/api/*"],
       "@assets/*": ["src/assets/*"],
       "@i18n/*": ["src/i18n/*"],
