--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
+    "recharts": "^3.7.0",
     "yup": "^1.7.1",
     "zustand": "^5.0.11"
   },
